--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,1 +1,7 @@
+<script src=\"http:\/\/www.google-analytics.com\/urchin.js\" type=\"text\/javascript\"><\/script>\
+<script type=\"text\/javascript\">\
+_uacct = \"UA-141548-9\";\
+urchinTracker();\
+<\/script>\
+\
 <\/html>
